Fixed formatting to match maven checkstyle rules